# HowToStartMakingGDExtensionsForGodot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build-extensions-debug.cmd  c_cpp_properties.json
game/: icon.svg.import  project.godot  test_scene.tscn  test_script.gd
gdextension_test/: CMakeLists.txt  gdextension.in
gdextension_test/src/: gdextension.cpp  test_node2d.cpp  test_node2d.hpp
